--- a/weather.html
+++ b/weather.html
@@ -14,6 +14,7 @@
     <title>Weather</title>
   </head>
   <body>
+      <button align="right" class="button" onclick="window.location.href='map.html'" class="button">Click for show map!</button></h2>
     <button  align="right" onclick="window.location.href='update.html'" class="button">Edite your information!</button></h2>
 <button align="right" class="button" onclick="window.location.href='login.html'" class="button">Log out!</button></h2><br>
 
@@ -29,6 +30,7 @@
 
 <br>
        <div class="column">
+
         <br><br>
 
         <div>
